--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="row">
         <div class="photoDiv">
-          <img class="profilePic" src="assets/images/me.jpg" alt="Akanksha Gupta">
+          <img class="profilePic" src="assets/images/profile.jpg" alt="Akanksha Gupta">
         </div>
       </div>
 
